* Fixed  "no such file or directory found" error when logging db tasks (David B)
* Logging improvements (Herman V)
* Fixed company fax being printed under shipto (Herman V)
* Fixed "File does not exist... [object HTMLButtonElement]" js error (Herman V)
* Fixed timecard template headers not showing company name, etc (Chris T)

Changelog for LedgerSMB 1.3.7 (Categorized due to length)
Database
* Added foreign key of entity_credit_account.language_code (Herman V)
* Corrected permissions issue for editing assembly (Chris T)

Code and Administration
* Exposed LedgerSMB::Sysconfig::tempdir to configuration file (Herman V)
* Fixed invoice tempfiles never being cleaned up (Herman V)
* Fixed LedgerSMB.pm warnings during tests (Herman V)
* Backup functionality moved to database administration interface (Chris T)
* Whitespace adjustment in Pg-database (Herman V)
* New form unsets $form->{header} to avoid lack of headers (Herman V)

User Interface
* Fixed pricelist button (customer/vendor) producing error (Chris T)
* Fixed date error when processing recurring transactions (Chris T)
* Corrected 'Invalid Year-end filter' when exporting trial balance (Chris T)
* Correcting errors attaching and retriving URL attachments (Chris T)
* Correcting parse errors in pos_template.txt (Chris T)
* Database administration interface more consistent (Chris T)
* Corrected Action not defined error on asset import (Chris T)
* Default language handling for invoices (Herman V)
* Fixed LaTeX errors in timecard templates (Chris T)
* Fixed error when batch printing timecards (Erik H)
* Fixed menu reversal with batch printing (Erik H)
* Removed broken edit buttons on bank account tab of contacts form (Chris T)
* Corrected UI glitches involving adding employee contact info (Chris T)
* Corrected missing translation call in contact template (Chris T)
* Corrected UI glitch when processing recurring transactions (Chris T)
* Corrected double escaping bug in balance sheet template (Erik H)